--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/KroMiose/nekro-plugin-template"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
-nekro-agent = "^0.9.2"
+nekro-agent = ">=1.0.0"
 
 
 [build-system]
